--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "browserslist": "^4.21.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -24,5 +25,8 @@
     "postcss": "^8.4.27",
     "process": "^0.11.10",
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "browserList": [
+    "last 2 versions"
+  ]
 }
